--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         .hero h1 {
             font-family: 'Crimson Pro', serif;
             font-size: clamp(2.5rem, 6vw, 4.5rem);
-            font-weight: 300;
+            font-weight: 400;
             color: rgba(255, 255, 255, 0.95);
             line-height: 1.25;
             margin-bottom: 16px;
@@ -2732,7 +2732,25 @@
                 </h1>
 
                 <p class="scenario-tagline fade-up visible fade-up-delay-7">Whitespace crafts <em>fresh, personalized</em> spoken meditations for exactly where you are. <strong>On-demand.</strong></p>
-                <div class="hero-badges-row fade-up visible fade-up-delay-7">
+                <p class="hero-cta-lead fade-up visible fade-up-delay-7" style="font-family: 'Inter', sans-serif; font-size: 0.95rem; color: rgba(255,255,255,0.55); margin-top: 28px; margin-bottom: 0;">Why wait? Start 10x'ing your inner self right now.</p>
+
+                <div class="hero-cta-box fade-up visible fade-up-delay-8" style="margin-top: 16px;">
+                    <p class="hero-cta-headline">Download free + get <strong>4 bonus sessions</strong></p>
+                    <div class="hero-cta-timer-row">
+                        <span class="hero-cta-timer-label">Limited time. Offer ends in</span>
+                        <span class="countdown-timer" id="hero-timer">1d 23:59:59</span>
+                    </div>
+                    <div class="app-store-buttons">
+                        <a href="https://apps.apple.com/us/app/whitespace-sleep-learn-focus/id6755617899" target="_blank" rel="noopener noreferrer" class="app-store-badge">
+                            <img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us?size=250x83&amp;releaseDate=1737590400" alt="Download on the App Store">
+                        </a>
+                        <a href="https://play.google.com/store/apps/details?id=io.one2all.whitespace" target="_blank" rel="noopener noreferrer" class="app-store-badge google-play">
+                            <img src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" alt="Get it on Google Play">
+                        </a>
+                    </div>
+                </div>
+
+                <div class="hero-badges-row fade-up visible fade-up-delay-8" style="margin-top: 20px;">
                     <a href="https://www.uneed.best/tool/whitespace" target="_blank" rel="noopener" class="hero-potd-row" style="text-decoration: none;">
                         <img src="src/assets/uneed-logo.avif" alt="Uneed" class="potd-badge-inline">
                         <span>#1 Product of the Day</span>
@@ -2747,22 +2765,6 @@
                         <span style="color: #f5a623; font-style: normal; font-size: 12px; letter-spacing: 1px;">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
                         <span>on the App Store</span>
                     </a>
-                </div>
-
-                <div class="hero-cta-box fade-up visible fade-up-delay-8" style="margin-top: 32px;">
-                    <p class="hero-cta-headline">Download free + get <strong>4 bonus sessions</strong></p>
-                    <div class="hero-cta-timer-row">
-                        <span class="hero-cta-timer-label">Limited time. Offer ends in</span>
-                        <span class="countdown-timer" id="hero-timer">1d 23:59:59</span>
-                    </div>
-                    <div class="app-store-buttons">
-                        <a href="https://apps.apple.com/us/app/whitespace-sleep-learn-focus/id6755617899" target="_blank" rel="noopener noreferrer" class="app-store-badge">
-                            <img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us?size=250x83&amp;releaseDate=1737590400" alt="Download on the App Store">
-                        </a>
-                        <a href="https://play.google.com/store/apps/details?id=io.one2all.whitespace" target="_blank" rel="noopener noreferrer" class="app-store-badge google-play">
-                            <img src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" alt="Get it on Google Play">
-                        </a>
-                    </div>
                 </div>
 
                 <!-- Rotating Quote Carousel -->
